--- a/project-1/Cargo.toml
+++ b/project-1/Cargo.toml
@@ -6,8 +6,8 @@ description = "A key-value store"
 edition = "2018"
 
 [dev-dependencies]
-assert_cmd = "0.11.0"
-predicates = "1.0.0"
+assert_cmd = "0.11"
+predicates = "1.0"
 
 [dependencies]
-clap = "2.33.3"
+structopt = "0.3"
