--- a/project-2/Cargo.toml
+++ b/project-2/Cargo.toml
@@ -6,11 +6,12 @@ description = "A key-value store"
 edition = "2018"
 
 [dev-dependencies]
-assert_cmd = "0.11.0"
-predicates = "1.0.0"
-tempfile = "3.0.7"
-walkdir = "2.2.7"
+assert_cmd = "0.11"
+predicates = "1.0"
 
 [dependencies]
-clap = "2.33.3"
-failure = "0.1.8"
+structopt = "0.3"
+serde = "1.0"
+serde_json = "1.0"
+ron = "0.6"
+bson = "1.2"
