--- a/project-2/Cargo.toml
+++ b/project-2/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 [dev-dependencies]
 assert_cmd = "0.11"
 predicates = "1.0"
+tempfile = "3.0"
+walkdir = "2.2"
 
 [dependencies]
 structopt = "0.3"
@@ -15,3 +17,4 @@ serde = "1.0"
 serde_json = "1.0"
 ron = "0.6"
 bson = "1.2"
+failure = "0.1.8"
