--- a/project-3/Cargo.toml
+++ b/project-3/Cargo.toml
@@ -7,15 +7,20 @@ edition = "2018"
 
 [dev-dependencies]
 assert_cmd = "0.11"
-criterion = "0.2.11"
+criterion = "0.3"
 predicates = "1.0.0"
 rand = "0.6.5"
 tempfile = "3.0.7"
 walkdir = "2.2.7"
 
+[[bench]]
+name = "benches"
+harness = false
+
 [dependencies]
 structopt = "0.3"
 serde = "1.0"
+serde_json = "1.0"
 ron = "0.6"
 failure = "0.1.8"
 slog = "2.7.0"
