--- a/project-4/Cargo.toml
+++ b/project-4/Cargo.toml
@@ -18,9 +18,11 @@ panic-control = "0.1.4"
 [dependencies]
 structopt = "0.3"
 serde = "1.0"
+serde_json = "1.0"
 ron = "0.6"
 failure = "0.1.8"
 slog = "2.7.0"
 slog-term = "2.8.0"
 sled = "0.34.6"
 rayon = "1.5.1"
+dashmap = { version = "4.0.2", features = ["serde", "rayon"] }
